Renamed SPACE column of MonstareMaster to contact_space

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -49,7 +49,15 @@
                 <h:form>
                     <h:commandLink action="/scenarioRecord/List" value="Show All ScenarioRecord Items"/>
                 </h:form>
+                <h:form>
+                    <h:commandLink action="/alignmentMaster/List" value="Show All AlignmentMaster Items"/>
+                </h:form>
+                <h:form>
+                    <h:commandLink action="/typeMaster/List" value="Show All TypeMaster Items"/>
+                </h:form>
 </h:body>
+
+
 
 </html>
 
